--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.16",
     "next-auth": "^4.24.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
