--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "next": "14.2.16",
     "next-auth": "^4.24.8",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
